--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "html-to-react": "^1.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-quill": "^2.0.0",
+    "react-quill": "github:lassespilling/react-quill-2024#package",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
     "react-toastify": "^10.0.5",
